--- a/templates/todo/tag_list.html
+++ b/templates/todo/tag_list.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
   <h3>Tags List</h3>
+  <a href="{% url 'todo:tag-create' %}" class="btn btn-primary link-to-page">
+      Create
+  </a>
   {% if tags_list %}
     <table>
       <tr>
