add tag update view

--- a/templates/todo/tag_list.html
+++ b/templates/todo/tag_list.html
@@ -17,7 +17,7 @@
           {{ tag.name }}
         </td>
         <td>
-          <a href="#">
+          <a href="{% url 'todo:tag-update' pk=tag.id %}">
             Update
           </a>
         </td>
