add tag delete view

--- a/templates/todo/tag_list.html
+++ b/templates/todo/tag_list.html
@@ -22,7 +22,7 @@
           </a>
         </td>
         <td>
-          <a href="#">
+          <a href="{% url 'todo:tag-delete' pk=tag.id %}">
             Delete
           </a>
         </td>
