--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="container">
   <ul class="sidebar-nav list-group">
     <li class="list-group-item">
-      <a href="#">
+      <a href="{% url 'todo:task-list' %}">
         Home
       </a>
     </li>
