--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,12 +1,12 @@
 <div class="container">
   <ul class="sidebar-nav list-group">
-    <li class="list-group-item">
-      <a href="{% url 'todo:task-list' %}">
+    <li class="list-group-item ">
+      <a class="delete-link" href="{% url 'todo:task-list' %}">
         Home
       </a>
     </li>
     <li class="list-group-item">
-      <a href="{% url 'todo:tag-list' %}">
+      <a class="delete-link" href="{% url 'todo:tag-list' %}">
         Tags
       </a>
     </li>
