--- a/templates/todo/tag_form.html
+++ b/templates/todo/tag_form.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% load crispy_forms_filters %}
 {% block content %}
-  <div class="col-sm-3">
+  <div class="col-sm-6">
     <h1>{{ object|yesno:"Update,Create" }} tag</h1>
     <form action="" method="post" novalidate>
       {% csrf_token %}
       {{ form|crispy }}
-      <input type="submit" value="Save" class="btn btn-primary">
+      <input type="submit" value="Save" class="btn btn-info">
     </form>
   </div>
 {% endblock %}
