--- a/templates/todo/task_form.html
+++ b/templates/todo/task_form.html
@@ -2,12 +2,12 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <div class="col-sm-3">
+  <div class="col-sm-6">
     <h1>{{ object|yesno:"Update,Create" }} Task</h1>
     <form action="" method="post" novalidate>
       {% csrf_token %}
       {{ form|crispy }}
-      <input type="submit" value="Save" class="btn btn-primary">
+      <input type="submit" value="Save" class="btn btn-info">
     </form>
   </div>
 {% endblock %}
